@@ -1,4 +1,1 @@
-# MD5 checksums generated by MD5summer (http://www.md5summer.org)
-# Generated 21.12.2011 21:28:57
-
-d6a0b72e755eb30f141183b1a2d70bfc *addons.xml
+c1d5250efc0f060ab5f234cc0560f7ba
