@@ -1,0 +1,3 @@
+<settings>
+   <setting id="stream_server" type="bool" label="Vynucený stream server" default="false"/>
+</settings>
